--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>Odin recipes</h1>
     <ul>
         <li><a href="http://recipes/coquito.htm"> Coquito Recipe</a></li>
+        <li><a href="http://recipes/coconut-rum-cream.html"> Coconut Rum Cream Recipe</a></li>
+        <li><a href="http://recipes/vitamix-eggnog.html">Vitamix Eggnog Recipe</a></li>
+
 
 
 
