--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
 <body>
     <h1>Odin recipes</h1>
     <ul>
-        <li><a href="http://recipes/coquito.htm"> Coquito Recipe</a></li>
-        <li><a href="http://recipes/coconut-rum-cream.html"> Coconut Rum Cream Recipe</a></li>
-        <li><a href="http://recipes/vitamix-eggnog.html">Vitamix Eggnog Recipe</a></li>
-
-
-
-
-        
+        <li><a href="recipes/vitamix-eggnog.html"></a></li>
+        <li><a href="recipes/coconut-rum-cream.html"></a></li>
+        <li><a href="recipes/coquito.html"></a></li>
     </ul>
 
 </body>
