FINAL FIX ON LINKS

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin recipes</h1>
     <ul>
-        <li><a href="recipes/vitamix-eggnog.html"></a>Vitamix Eggnog Recipe</li>
-        <li><a href="recipes/coconut-rum-cream.html"></a> Coconut Rum Cream Recipe</li>
-        <li><a href="recipes/coquito.html"></a>Coquito Recipe</li>
+        <li><a href="recipes/vitamix-eggnog.html">Vitamix Eggnog Recipe</a></li>
+        <li><a href="recipes/coconut-rum-cream.html"> Coconut Rum Cream Recipe</a></li>
+        <li><a href="recipes/coquito.html">Coquito Recipe</a></li>
     </ul>
 
 </body>
